tests/errors/semantic/blocking/REMOVE_SET_KEYERROR_TYPE_2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

se = {2, 3, 6, 9}

se.remove((2,3))
 
